--- a/.github/workflows/run-test-script.yml
+++ b/.github/workflows/run-test-script.yml
@@ -29,7 +29,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install pandas numpy yfinance requests beautifulsoup4 lxml
+        pip install pandas numpy yfinance requests beautifulsoup4 lxml lntk
 
     # 4. Esegue lo script Python
     # Assicurati che il nome del file qui sotto corrisponda al tuo file reale!
